--- a/config
+++ b/config
@@ -1,9 +1,10 @@
+MDTverboselevel=4
 THIS IS A DUMMY FILE
 FOR THE MOMENT IS NOT USED..
 JUST READ
 LINE BY LINE
 MDTemail=frenke@frenke.it
-MDTverboselvel=4
+
  
 
 
