--- a/config
+++ b/config
@@ -4,6 +4,9 @@ FOR THE MOMENT IS NOT USED..
 JUST READ
 LINE BY LINE
 MDTemail=frenke@frenke.it
+OKK scripts
+OKK /sites/all/scripts/
+KOO /sites/all/scripts/maintenance
 
  
 
