--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,5 @@
 SLACK_WEBHOOK_URL="https://hooks.slack.com/services/xxx/xxx/xxx"
 SLACK_CHANNEL="#channelname"
-SLACK_EMOJI=":emoji:"
+SLACK_EMOJI_OK=":emoji:"
+SLACK_EMOJI_KO=":emoji:"
 SLACK_USERNAME="githubparser"
