--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,6 @@
 SLACK_WEBHOOK_URL="https://hooks.slack.com/services/xxx/xxx/xxx"
-SLACK_CHANNEL="#channelname"
+SLACK_CHANNEL_PROD="#channel"
+SLACK_CHANNEL_DEV="#channel_dev"
 SLACK_EMOJI_OK=":emoji:"
-SLACK_EMOJI_KO=":emoji:"
-SLACK_USERNAME="githubparser"
+SLACK_EMOJI_KO=":emoji2:"
+SLACK_USERNAME="Github Parser"
