--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,8 @@
 SLACK_WEBHOOK_URL="https://hooks.slack.com/services/xxx/xxx/xxx"
-SLACK_CHANNEL_LIVE="#channel"
-SLACK_CHANNEL_DEV="#channel_dev"
-SLACK_EMOJI_OK=":emoji:"
-SLACK_EMOJI_KO=":emoji2:"
+SLACK_CHANNEL_LIVE="#service_messages"
+SLACK_CHANNEL_DEV="#service_messages_dev"
+SLACK_EMOJI_OK=":white_check_mark:"
+SLACK_EMOJI_KO=":x:"
 SLACK_USERNAME="Github Parser"
 GITHUB_REPO_LIVE="xxx/xxx"
 GITHUB_REFS_LIVE="refs/heads/xxx"
