process simpler, removed code that could cause confusion. small refactoring around slack send message.

--- a/.env_example
+++ b/.env_example
@@ -4,5 +4,4 @@ SLACK_CHANNEL_DEV="#service_messages_dev"
 SLACK_EMOJI_OK=":white_check_mark:"
 SLACK_EMOJI_KO=":x:"
 SLACK_USERNAME="Github Parser"
-GITHUB_REPO_LIVE="xxx/xxx"
-GITHUB_REFS_LIVE="refs/heads/xxx"
+GITHUB_REPO="xxx/xxx"
